--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -1,4 +1,10 @@
 {
   "pageTitle": "Страница {name}!",
-  "changeRegion": "Изменить Регион"
+  "landingAppDescription": "Корпоративный мессенджер с применением технологий искуственного интеллекта.",
+  "getStarted": "Начать",
+  "apps": "Приложения",
+  "about": "О проекте",
+  "blog": "Блог",
+  "region": "Российская Федерация(Русский)",
+  "сhangeRegion": "Изменить Регион"
 }
