--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -1,10 +1,27 @@
 {
   "pageTitle": "Страница {name}!",
-  "landingAppDescription": "Корпоративный мессенджер с применением технологий искуственного интеллекта.",
-  "getStarted": "Начать",
+  
   "apps": "Приложения",
   "about": "О проекте",
   "blog": "Блог",
   "region": "Российская Федерация(Русский)",
-  "сhangeRegion": "Изменить Регион"
+  "сhangeRegion": "Изменить Регион",
+
+  "getStarted": "Начать",
+  "landingAppDescription": "Ваш корпоративный мессенджер с применением технологий искусственного интеллекта.",
+
+  "enterEmail": "Введите свой email",
+  "confirm": "Подтвердить",
+  "recovery": "Возобновить доступ",
+  "authDescription": "Мы используем простую модель аутентификации, без логина и пароля - только электронная почта, которая будет использоваться для генерации кода подтверждения.",
+
+  "checkEmail": "Проверьте свой email",
+  "invalidEmail": "Это не очень похоже на email.",
+  "confirmDescription": "Мы отправили 6-значный код подтверждения на {email}. Он скоро истечет, поэтому введите его в ближайшее время.",
+  "confirmExpire": "Код подтверждения истекает через {seconds} секунд",
+
+  "offline": "Интернет соединение не активно",
+  "online": "Восстановлена работа онлайн",
+  "proceed": "Продолжить",
+  "cancel": "Отменить"
 }
